# Snorgnote

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  roadmap.md  vite.config.ts
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/app_commands/: Cargo.toml
crates/app_commands/src/: lib.rs
crates/core_domain/: Cargo.toml
crates/core_domain/src/: lib.rs
crates/core_focus/: Cargo.toml
crates/core_focus/src/: lib.rs
crates/core_jobs/: Cargo.toml
crates/core_jobs/src/: lib.rs
crates/core_llm/: Cargo.toml
crates/core_llm/src/: lib.rs
crates/core_metrics/: Cargo.toml
crates/core_metrics/src/: lib.rs
crates/core_planning/: Cargo.toml
crates/core_planning/src/: lib.rs
crates/core_skills/: Cargo.toml
crates/core_skills/src/: lib.rs
crates/core_storage/: Cargo.toml
crates/core_storage/src/: lib.rs
crates/core_vault/: Cargo.toml
crates/core_vault/src/: lib.rs
docs/: ARCHITECTURE.md  event-contract.md  skill-spec.md
docs/adr/: 0001-core-architecture.md
migrations/: 0001_init.sql
schemas/: skill_manifest_v1.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_telegram.sql  003_trash_and_index_state.sql  004_focus_pause_resume.sql  005_flashcards.sql  006_projects_perf.sql  007_habits.sql
src-tauri/skills/: daily_planner.yaml  mood_money_events_summary.yaml  spaced_review.yaml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs  telegram.rs  traits.rs
src-tauri/src/core/: db.rs  deeplink.rs  flashcards.rs  focus.rs  habits.rs  jobs.rs  mod.rs  planner.rs  projects.rs  protocol.rs  review.rs  skills.rs  state.rs  telegram.rs  theme.rs  types.rs  utils.rs
src/components/: virtual-list.tsx  window-titlebar-utils.test.ts  window-titlebar-utils.ts  window-titlebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/features/: flashcards-panel.test.tsx  flashcards-panel.tsx  flashcards-review-window.test.tsx  flashcards-review-window.tsx  focus-panel.tsx  habits-panel.test.tsx  habits-panel.tsx  inbox-panel.tsx  notes-panel.test.tsx  notes-panel.tsx  planning-panel.tsx  projects-panel.test.tsx  projects-panel.tsx  settings-panel.test.tsx  settings-panel.tsx  stats-panel.tsx
src/features/focus/: notifications.test.ts  notifications.ts  pomodoro-engine.test.ts  pomodoro-engine.ts  pomodoro-storage.test.ts  pomodoro-storage.ts  use-pomodoro.ts  watch-clock.tsx
src/lib/: api-flashcards.test.ts  api-focus.test.ts  api-habits.test.ts  api-projects.test.ts  api.ts  app-view.test.ts  app-view.ts  inbox-events.test.ts  inbox-events.ts  locale.tsx  review-window.test.ts  review-window.ts  theme-utils.test.ts  theme-utils.ts  theme.tsx
src/types/: api.ts
