[package]
name = "snorgnote"
version = "0.1.0"
description = "Snorgnote desktop knowledge and productivity pipeline"
authors = ["Snorgnote contributors"]
license = "Apache-2.0"
repository = "https://github.com/Rusti3/Snorgnote.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snorgnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
thiserror = "2.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
