[package]
name = "snorgnote"
version = "0.1.0"
description = "Snorgnote desktop knowledge and productivity pipeline"
authors = ["Snorgnote contributors"]
license = "Apache-2.0"
repository = "https://github.com/Rusti3/Snorgnote.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snorgnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.14"
