[package]
name = "snorgnote-desktop"
version = "0.1.0-alpha.2"
description = "Snorgnote desktop shell"
edition = "2024"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
app_commands = { path = "../../../crates/app_commands" }

[features]
default = []

[workspace]
